# SyncCrate

./: .gitignore  LICENSE  README.md  package-lock.json
.github/workflows/: release.yml
docs/: index.html
simshare/: package-lock.json  package.json  tailwind.config.js
simshare/src/: App.tsx
simshare/src-tauri/: Cargo.toml  tauri.conf.json
simshare/src-tauri/capabilities/: default.json
simshare/src-tauri/icons/: icon.icns
simshare/src-tauri/src/: lib.rs  packs.rs  state.rs  utils.rs
simshare/src-tauri/src/commands/: backup.rs  files.rs  install.rs  mod.rs  packs.rs  profiles.rs  session.rs  sync.rs  tags.rs
simshare/src-tauri/src/network/: discovery.rs  protocol.rs  transfer.rs
simshare/src-tauri/src/sync/: diff.rs
simshare/src/components/: BackupList.tsx  ConflictResolver.tsx  Dashboard.tsx  DonateModal.tsx  DonationBanner.tsx  DropZoneOverlay.tsx  InstallResultsModal.tsx  Layout.tsx  ModDetailsPanel.tsx  ModItem.tsx  ModList.tsx  PeerList.tsx  ProfileCard.tsx  ProfileList.tsx  SaveList.tsx  Settings.tsx  Sidebar.tsx  StatusBadge.tsx  SyncActionItem.tsx  SyncBanner.tsx  TagEditor.tsx
simshare/src/hooks/: useSession.ts  useSync.ts  useTauriEvents.ts
simshare/src/lib/: commands.ts  demoData.ts  donations.ts  toast.ts  types.ts
simshare/src/stores/: useAppStore.ts
simshare/src/styles/: globals.css
simsync/: package.json
simsync/src-tauri/: Cargo.toml  tauri.conf.json
synccrate/: package.json
synccrate/src/: App.tsx
synccrate/src-tauri/: Cargo.toml  tauri.conf.json
synccrate/src-tauri/src/: game_registry.json  lib.rs  state.rs  (+1 more)
(+8 files in other folders)
