[package]
name = "simshare"
version = "0.2.2"
edition = "2021"

[lib]
name = "simshare_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
notify = "7"
mdns-sd = "0.11"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
chrono = "0.4"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["codec"] }
rand = "0.8"
